RESOLVED FIXED194872
Regression(PSON) "Reload without content extensions" does not work when the main resource is blocked
https://bugs.webkit.org/show_bug.cgi?id=194872
Summary Regression(PSON) "Reload without content extensions" does not work when the m...
Chris Dumez
Reported 2019-02-20 14:24:54 PST
"Reload without content extensions" does not work when the main resource is blocked, it keeps blocking the load when PSON is enabled.
Attachments
Patch (8.85 KB, patch)
2019-02-20 14:30 PST, Chris Dumez
no flags
Patch (9.10 KB, patch)
2019-02-20 14:51 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-02-20 14:25:12 PST
Chris Dumez
Comment 2 2019-02-20 14:30:37 PST
EWS Watchlist
Comment 3 2019-02-20 14:33:46 PST
Attachment 362541 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4916: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4920: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 4 2019-02-20 14:36:52 PST
Comment on attachment 362541 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362541&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4875 > + [[WKContentRuleListStore defaultStore] removeContentRuleListForIdentifier:@"ContentBlockingAfterProcessSwapExtension" completionHandler:^(NSError *error) { Can we do this at the end of the test to prevent the state from leaking into other tests?
Chris Dumez
Comment 5 2019-02-20 14:51:53 PST
EWS Watchlist
Comment 6 2019-02-20 14:55:35 PST
Attachment 362546 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4916: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:4920: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2019-02-20 15:30:09 PST
Comment on attachment 362546 [details] Patch Clearing flags on attachment: 362546 Committed r241845: <https://trac.webkit.org/changeset/241845>
WebKit Commit Bot
Comment 8 2019-02-20 15:30:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.